--- a/app/src/main/res/layout/activity_room_reservation.xml
+++ b/app/src/main/res/layout/activity_room_reservation.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_gradient"
     tools:context=".RoomReservation">
 
     <LinearLayout
@@ -210,6 +211,7 @@
             android:gravity="center"
             android:background="@drawable/custom_button"
             android:paddingHorizontal="20dp"
+            android:layout_marginBottom="30dp"
             android:text="@string/bookNow"
             android:textColor="@color/orange" />
 
