Creating a dummy shared pref

--- a/app/src/main/res/layout/activity_room_reservation.xml
+++ b/app/src/main/res/layout/activity_room_reservation.xml
@@ -42,6 +42,7 @@
                 android:id="@+id/roomType1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:minLines="9"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/radio_flat_selector"
@@ -55,6 +56,7 @@
                 android:id="@+id/roomType2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:minLines="9"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/radio_flat_selector"
@@ -68,6 +70,7 @@
                 android:id="@+id/roomType3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:minLines="9"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/radio_flat_selector"
@@ -113,6 +116,7 @@
                 android:id="@+id/mealType1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:minLines="9"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/radio_flat_selector"
@@ -126,6 +130,7 @@
                 android:id="@+id/mealType2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:minLines="9"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/radio_flat_selector"
@@ -139,6 +144,7 @@
                 android:id="@+id/mealType3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:minLines="9"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/radio_flat_selector"
